--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
     <title>WEBSTUDIO</title>
 </head>
 <body>
-    <div class="container">
     <!-- Golova -->
-   <header>
-    <div class="header-container">
-    <nav>
+   <header class="page-header">
+    <div class="container flex">
+    <nav class="flex">
         <a class="logo link" href="./index.html">Web<span class="studio">Studio</span></a>
-        <ul  class="list nav-list">
-            <li class="paragraph"><a class="colorpar link" href="./index.html">Studio</a></li>
-            <li class="paragraph"><a class="colorpar link" href="./portfolio.html">Portfolio</a></li>
-            <li class="paragraph"><a class="colorpar link" href="">Contacts</a></li>
+        <ul  class="list flex">
+            <li class="link paragraph"><a class="link" href="./index.html">Studio</a></li>
+            <li class="link paragraph"><a class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="link paragraph"><a class="link" href="">Contacts</a></li>
         </ul>
     </nav>   
-    <address class="address">
-        <ul class="list">
+    <address class="address flex">
+        <ul class="flex list">
             <li class="mail"><a class="colorcontact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="phone"><a class="colorcontact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li class="mail"><a class="colorcontact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address> 
     </div>
@@ -36,64 +35,85 @@
    <main>
    <!-- 1 article -->
    <section class="first">
+        <div class="container">
         <h1 class="header">Effective Solutions for Your Business</h1>
         <button class="order-service-button" type="button">Order Service</button>
+        </div>
    </section>
    <!-- 2 article -->
-   <section class="second">
-        <h2 class="second-header" hidden>features</h2>
-            <ul class="list">
-            <li class="list-item"><h3 class="third-header">Strategy</h3>
+   <section class="section">
+        <div class="container">
+        <h2 hidden>features</h2>
+            <ul class="list list-of-advantages">
+            <li><h3 class="third-header">Strategy</h3>
                 <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li class="list-item"><h3 class="third-header">Punctuality</h3>
+            <li><h3 class="third-header">Punctuality</h3>
                 <p class="list-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li class="list-item"><h3 class="third-header">Diligence</h3>
+            <li><h3 class="third-header">Diligence</h3>
                 <p class="list-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.  </p>
             </li>
-            <li class="list-item"><h3 class="third-header">Technologies</h3>
+            <li><h3 class="third-header">Technologies</h3>
                 <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
             </ul>
+            </div>
    </section>
    <!-- 3 article -->
-   <section class="third-section">
+   <section class="section third-section">
+        <div class="container">
         <h2 class="third-article-header">What are we doing</h2>
-        <ul class="list">
+        <ul class="list picture-list">
             <li class="list-images"><img src="./images/img1.jpg" alt="Image 1" width="360" height="300"></li>
             <li class="list-images"><img src="./images/img2.jpg" alt="Image 2" width="360" height="300"></li>
             <li class="list-images"><img src="./images/img3.jpg" alt="Image 3" width="360" height="300"></li>
         </ul>
+        </div>
    </section>
    <!-- 4 article -->
-   <section class="fourth-article">
+   <section class="section fourth-article">
+    <div class="container">
         <h2 class="fourth-article-header">Our Team</h2>
-        <ul class="list">
+        <ul class="list list-of-employees">
             <li class="fourth-article-list">
-                <img src="./images/photo1.jpg" alt="Photo 1" width="264" height="260">
-                <h3 class="third-header">Mark Guerrero </h3><p class="fourth-article-text">Product Designer</p>
+                <img class="employee-photo" src="./images/photo1.jpg" alt="Photo 1" width="264" height="260">
+                <div class="employee-information">
+                <h3 class="employee-name">Mark Guerrero </h3>
+                <p class="employee-position">Product Designer</p>
+                </div>
             </li>
             <li class="fourth-article-list">
-                <img src="./images/photo2.jpg" alt="Photo 2" width="264" height="260">
-                <h3 class="third-header">Tom Ford</h3> <p class="fourth-article-text">Frontend Developer</p>
+                <img class="employee-photo" src="./images/photo2.jpg" alt="Photo 2" width="264" height="260">
+                <div class="employee-information">
+                <h3 class="employee-name">Tom Ford</h3>
+                <p class="employee-position">Frontend Developer</p>
+                </div>
             </li>
             <li class="fourth-article-list">
-                <img src="./images/photo3.jpg" alt="Photo 3" width="264" height="260">
-                <h3 class="third-header">Camila Garcia</h3><p class="fourth-article-text"> Marketing</p>
+                <img class="employee-photo" src="./images/photo3.jpg" alt="Photo 3" width="264" height="260">
+                <div class="employee-information">
+                <h3 class="employee-name">Camila Garcia</h3>
+                <p class="employee-position"> Marketing</p>
+                </div>
             </li>
             <li class="fourth-article-list">            
-                <img src="./images/photo4.jpg" alt="Photo 4" width="264" height="260">
-                <h3 class="third-header">Daniel Wilson</h3><p class="fourth-article-text"> UI Designer</p>
+                <img class="employee-photo" src="./images/photo4.jpg" alt="Photo 4" width="264" height="260">
+                <div class="employee-information">
+                <h3 class="employee-name">Daniel Wilson</h3>
+                <p class="employee-position"> UI Designer</p>
+                </div>
             </li>
         </ul>
+    </div>
    </section>
     </main>
    <!-- Page end -->
    <footer class="footer">
-        <a class="logo-footer link" href="./index.html">Web<span class="studioend">Studio</span></a>
+    <div class="container footer-container">
+        <a class="logo link logo-footer" href="./index.html">Web<span class="studioend">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
     </div>
+    </footer>
 </body>
 </html>
