--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav class="flex">
         <a class="logo link" href="./index.html">Web<span class="studio">Studio</span></a>
         <ul  class="list flex">
-            <li class="link paragraph"><a class="link" href="./index.html">Studio</a></li>
-            <li class="link paragraph"><a class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="link paragraph"><a class="link" href="">Contacts</a></li>
+            <li class="link paragraph"><a class="nav-color link" href="./index.html">Studio</a></li>
+            <li class="link paragraph"><a class="nav-color link" href="./portfolio.html">Portfolio</a></li>
+            <li class="link paragraph"><a class="nav-color link" href="">Contacts</a></li>
         </ul>
     </nav>   
     <address class="address flex">
@@ -45,16 +45,16 @@
         <div class="container">
         <h2 hidden>features</h2>
             <ul class="list list-of-advantages">
-            <li><h3 class="third-header">Strategy</h3>
+            <li class="advantages-list"><h3 class="third-header">Strategy</h3>
                 <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li><h3 class="third-header">Punctuality</h3>
+            <li class="advantages-list"><h3 class="third-header">Punctuality</h3>
                 <p class="list-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3 class="third-header">Diligence</h3>
+            <li class="advantages-list"><h3 class="third-header">Diligence</h3>
                 <p class="list-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.  </p>
             </li>
-            <li><h3 class="third-header">Technologies</h3>
+            <li class="advantages-list"><h3 class="third-header">Technologies</h3>
                 <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
             </ul>
