--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
         <nav class="flex">
             <a class="logo link" href="./index.html">Web<span class="studio">Studio</span></a>
             <ul  class="list flex">
-                <li class="link paragraph"><a class="link" href="./index.html">Studio</a></li>
-                <li class="link paragraph"><a class="link" href="./portfolio.html">Portfolio</a></li>
-                <li class="link paragraph"><a class="link" href="">Contacts</a></li>
+                <li class="paragraph link"><a class="nav-color link" href="./index.html">Studio</a></li>
+                <li class="paragraph link"><a class="nav-color link" href="./portfolio.html">Portfolio</a></li>
+                <li class="paragraph link"><a class="nav-color link" href="">Contacts</a></li>
             </ul>
         </nav>   
         <address class="address flex">
@@ -45,7 +45,7 @@
             <ul class="list portfolio-list">
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img4.jpg" alt="Image 4" width="320" height="300">
+                    <img src="./images/img4.jpg" alt="Image 4" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Banking App Interface Concept</h2> 
                     <p class="portfolio-list-text">App</p>
@@ -54,7 +54,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img5.jpg" alt="Image 5" width="320" height="300">
+                    <img src="./images/img5.jpg" alt="Image 5" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Cashless Payment</h2>
                     <p class="portfolio-list-text">Marketing</p>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img6.jpg" alt="Image 6" width="320" height="300">
+                    <img src="./images/img6.jpg" alt="Image 6" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Meditation App</h2>
                     <p class="portfolio-list-text">App</p>
@@ -72,7 +72,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img7.jpg" alt="Image 7" width="320" height="300">
+                    <img src="./images/img7.jpg" alt="Image 7" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Taxi Service</h2>
                     <p class="portfolio-list-text">Marketing</p>
@@ -81,7 +81,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img8.jpg" alt="Image 8" width="320" height="300">
+                    <img src="./images/img8.jpg" alt="Image 8" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Screen Illustrations</h2>
                     <p class="portfolio-list-text">Design</p>
@@ -90,7 +90,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img9.jpg" alt="Image 9" width="320" height="300">
+                    <img src="./images/img9.jpg" alt="Image 9" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Online Courses</h2>
                     <p class="portfolio-list-text">Marketing</p>
@@ -99,7 +99,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img10.jpg" alt="Image 10" width="320" height="300">
+                    <img src="./images/img10.jpg" alt="Image 10" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Instagram Stories Concept</h2> 
                     <p class="portfolio-list-text">Design</p>
@@ -108,7 +108,7 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img11.jpg" alt="Image 11" width="320" height="300">
+                    <img src="./images/img11.jpg" alt="Image 11" width="360" height="300">
                     <div class="cards-info">
                     <h2 class="third-header-portfolio">Organic Food</h2>
                     <p class="portfolio-list-text">Web Site</p>
@@ -117,8 +117,8 @@
                 </li>
                 <li class="portfolio-images">
                     <a class="link" href="./index.html">
-                    <img src="./images/img12.jpg" alt="Image 12" width="320" height="300">
-                    <div class="cards-info"></div>
+                    <img src="./images/img12.jpg" alt="Image 12" width="360" height="300">
+                    <div class="cards-info">
                     <h2 class="third-header-portfolio">Fresh Coffee</h2> 
                     <p class="portfolio-list-text">Web Site</p>
                     </div>
